<!--
     Copyright © 2015
     GHARBI Eddy
     PARRENO Michel
     VELTRI Constantin
     NGUYEN Remy
     GALLI Romain

     Cette œuvre est protégée par le droit d’auteur et strictement réservée à l’usage privé du
     client. Toute reproduction ou diffusion au profit de tiers, à titre
     gratuit ou onéreux, de
     tout ou partie de cette œuvre est strictement interdite et constitue une contrefaçon prévue
     par les articles L 335-2 et suivants du Code de la propriété
     intellectuelle. Les ayants-droits se
     réservent le droit de poursuivre toute atteinte à leurs droits de
     propriété intellectuelle devant les
     juridictions civiles ou pénales.
-->

<resources>
    <string name="app_name">LOLCompanion</string>
    <!-- Login screen -->
    <string name="welcome">League of Legends Companion</string>
    <string name="login">Welcome</string>
    <string name="lol_policy">LoLCompanion isn\'t endorsed by Riot Games and doesn\'t reflect the views or opinions of Riot Games or anyone officially
        involved in producing or managing League of Legends.
        \n\nLeague of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc.
        \n\nLeague of
        Legends © Riot Games, Inc.</string>
    <string name="lol_policy_title">About LoLCompanion</string>
    <string name="action_settings">Settings</string>
    <string name="cooldown_tip">Share ennemies cooldowns and improve your strategy</string>
    <string name="analysis_tip">Current season analysis for allies and ennemies </string>
    <string name="synchro_tip">App synchronised, launch once, play several</string>
    <string name="security_tip">Sharing channel protected by team password</string>
    <string name="summoner_name">Summoner name</string>
    <string name="login_submit">Go</string>

    <string-array name="lol_regions_array">
        <item>NA - North America</item>
        <item>EUW - Europe West</item>
        <item>EUNE - Europe Nordic and East</item>
        <item>BR - Brasil</item>
        <item>TR - Turkey</item>
        <item>RU - Russia</item>
        <item>LAN - Latin America North</item>
        <item>LAS - Latin America South</item>
        <item>OCE - Oceania</item>
    </string-array>

    <!-- Pending room -->
    <string name="title_activity_pending_room">PendingRoomActivity</string>
    <string name="pending">Pending Room</string>
    <string name="pending_description">The application will start automatically with your online game</string>
    <string name="pending_alert">If the game is not detected, you will be redirected to the home page in :</string>

    <!-- Timer room -->
    <string name="title_activity_timer">TimerActivity</string>
    <string name="timers">Timers</string>
    <string name="secure_timers">Secure your timers</string>
    <string name="secure_timers_text">Add a passphrase and give it to your mates so they can share the timers with you</string>
    <string name="secure_timers_edit">passphrase</string>

    <!-- Allies screen -->
    <string name="title_activity_allies">AlliesActivity</string>
    <string name="allies">Allies</string>
    <string name="hello_world">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam placerat magna sit amet elit malesuada, et maximus odio gravida. Vivamus sit amet dictum nulla, fringilla consectetur nibh. In vitae pulvinar neque, vitae congue enim. Nullam ultricies erat quis lectus tristique, in finibus nibh laoreet. Nunc egestas consectetur orci vitae finibus. Curabitur molestie accumsan tempor. Aenean eget mauris sed arcu lacinia molestie vel et augue. Sed elementum pulvinar dignissim. Vivamus pha
    </string>
    <string name="unranked">UNRANKED</string>

    <string name="wins">W</string>
    <string name="looses">L</string>
    <string name="purcent">%</string>
    <string name="summoner_level">LEVEL </string>

    <!-- Ennemies screen -->
    <string name="title_activity_ennemies">EnnemiesActivity</string>
    <string name="ennemies">Opponents</string>

    <!-- Champion tip Fragment -->
    <string name="close_dialog">Close</string>
    <string name="next_dialog">Next</string>
    <string name="confirm_dialog">OK</string>
    <string name="title_activity_companion">CompanionActivity</string>

    <!-- Advanced stats activity -->
    <string name="advstats_title_activity">Advanced Stats</string>
    <string name="advstats_build">Favorite build</string>
    <string name="advstats_winrates">Win Rates</string>
    <string name="advstats_mpc">Most played champions</string>
    <string name="advstats_cpm">Average Creeps / Minute</string>
    <string name="advstats_winrates_global_title">Global</string>
    <string name="advstats_winrates_champion_title">With</string>

    <string name="advstats_chart_mpc_played_game">Played Games</string>
    <string name="advstats_chart_mpc_winned_games">Wins</string>
    <string name="advstats_chart_mpc_losed_games">Loses</string>

    <string name="advstats_chart_cpm_killed_creeps">Killed Creeps</string>
    <string name="advstats_chart_cpm_missed_creeps">Missed Creeps</string>

    <!-- TOASTS -->
    <string name="pending_logging">Logging&#8230;</string>
    <string name="pending_port_testing">Trying to connect to LolCompanion servers&#8230;</string>
    <string name="pending_port_unreachable">Servers unreachable, check your connection firewall and open ports&#8230;</string>
    <string name="beta_test_version_end">This beta version is no longer available</string>
    <string name="pending_network_error">Please connect to WiFi or Mobile Network</string>
    <string name="pending_waiting_signal">Waiting for game signal&#8230;</string>
    <string name="pending_loading_game">Loading game data&#8230;</string>
    <string name="disconnected_from_ws">Disconnected from server</string>
    <string name="title_activity_advanced_stats">AdvancedStatsActivity</string>
    <string name="ranked_statistics_restriction_click_advanced_stats">Not enough statistics</string>

    <!-- CACHE AND WEBSOCKETS SETTINGS -->
    <string name="cache_ip">37.187.97.102</string>
    <string name="cache_port">1337</string>
    <string name="websocket_ip">5.135.153.45</string>
    <string name="websocket_port">8081</string>
    <string name="lolcompanion_server_timeout_millisecond">3000</string>

</resources>
