<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:src="@drawable/title_tab" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:paddingTop="24dp"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_font"
            android:textSize="20dp" />


    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/light_font"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="-3"
            android:shadowRadius="1.5" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_high_margin"
        android:layout_marginRight="@dimen/activity_horizontal_high_margin"
        android:layout_marginTop="20dp"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:background="@color/bg_black_transparent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/timer"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/activity_vertical_low_margin"
                android:paddingTop="@dimen/activity_vertical_low_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:src="@drawable/login_timer" />

            <TextView
                android:id="@+id/cooldown_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cooldown_tip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_font" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/magnifier"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/activity_vertical_low_margin"
                android:paddingTop="@dimen/activity_vertical_low_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:src="@drawable/login_magnifier" />

            <TextView
                android:id="@+id/analysis_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/analysis_tip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_font" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/synchro"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/activity_vertical_low_margin"
                android:paddingTop="@dimen/activity_vertical_low_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:src="@drawable/login_synchro" />

            <TextView
                android:id="@+id/synchro_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/synchro_tip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_font" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/security"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/activity_vertical_low_margin"
                android:paddingTop="@dimen/activity_vertical_low_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:src="@drawable/login_security" />

            <TextView
                android:id="@+id/security_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/security_tip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_font" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_high_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_high_margin"
        android:layout_marginRight="@dimen/activity_horizontal_high_margin"
        android:layout_marginTop="10dp"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        tools:context=".MainActivity">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/summoner_name"
            android:background="#AACCCCCC"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:hint="@string/summoner_name" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/login_submit"
            android:id="@+id/login_submit"
            android:minWidth="120dp"
            android:background="#FFFFFF"
            android:onClick="lauchSummonerSearch"/>
    </LinearLayout>


</LinearLayout>
