<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/global_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.ema.lolcompanion.AdvancedStatsActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="org.ema.lolcompanion.AdvancedStatsActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-15dp"
            android:src="@drawable/title_tab" />

        <TextView
            android:id="@+id/allies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:paddingTop="14dp"
            android:text="@string/advstats_title_activity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_font"
            android:textSize="20dp" />


    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_advstats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="-10dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        tools:context="org.ema.lolcompanion.AdvancedStatsActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/bg_black_transparent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            tools:context=".AdvancedStatsActivity">

            <!-- FAVORITE BUILD CONTAINER -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".AdvancedStatsActivity">

                <TextView
                    android:id="@+id/advstats_build"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="start"
                    android:shadowColor="#000000"
                    android:shadowDx="3"
                    android:shadowDy="-3"
                    android:shadowRadius="1.5"
                    android:text="@string/advstats_build"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/light_font" />

                <!-- FAVORITE ITEMS -->
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/advstats_build_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:context=".AdvancedStatsActivity">


                </LinearLayout>

            </LinearLayout>

            <!-- Winrates and MPC BUILD CONTAINER -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".AdvancedStatsActivity">

                <!-- WINRATES -->
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/advstats_winrates_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.0"
                    tools:context=".AdvancedStatsActivity">

                    <TextView
                        android:id="@+id/advstats_winrate"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="start"
                        android:shadowColor="#000000"
                        android:shadowDx="3"
                        android:shadowDy="-3"
                        android:shadowRadius="1.5"
                        android:text="@string/advstats_winrates"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/light_font" />

                </LinearLayout>

                <!-- MPC -->
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/advstats_mpc_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.0"
                    tools:context=".AdvancedStatsActivity">

                    <TextView
                        android:id="@+id/advstats_mpc"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="start"
                        android:shadowColor="#000000"
                        android:shadowDx="3"
                        android:shadowDy="-3"
                        android:shadowRadius="1.5"
                        android:text="@string/advstats_mpc"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/light_font" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
