<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PendingRoomActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".PendingRoomActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:src="@drawable/title_tab" />

        <TextView
            android:id="@+id/pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:paddingTop="24dp"
            android:text="@string/pending"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_font"
            android:textSize="20dp" />


    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_high_margin"
        android:layout_marginRight="@dimen/activity_horizontal_high_margin"
        android:background="@color/bg_black_transparent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        tools:context=".PendingRoomActivity">


        <TextView
            android:id="@+id/pending_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pending_description"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_font" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_high_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_high_margin"
        android:layout_marginRight="@dimen/activity_horizontal_high_margin"
        android:layout_marginTop="10dp"
        android:background="@color/bg_black_transparent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        tools:context=".PendingRoomActivity">

        <TextView
            android:id="@+id/pending_alert"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/pending_alert"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_font" />

        <TextView
            android:id="@+id/pending_counter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="10:00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_font" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_high_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_high_margin"
        android:layout_marginRight="@dimen/activity_horizontal_high_margin"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:context=".PendingRoomActivity">

        <TextView
            android:id="@+id/pending_summoner_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="-3"
            android:shadowRadius="1.5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_font" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/loadin_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_high_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_high_margin"
        android:layout_marginRight="@dimen/activity_horizontal_high_margin"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        tools:context=".PendingRoomActivity">

        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:indeterminate="true" />
    </LinearLayout>
</LinearLayout>
